# PTC_Tempo_Client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MIT  README.md  config.json  main.cpp  tempoclient.dox
include/: Config.hpp  Monitor.hpp  Router.hpp  Settings.hpp  TempoClient.hpp
infra_scripts/: build-app.sh  code-analysis.sh  jenkinsfile-lint  jenkinsfile-sonarcloud  sonarcloud.sh
